// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Templates API Browse Can browse email templates 1: [body] 1`] = `
Object {
  "email_templates": Array [
    Object {
      "background_color": "#ffffff",
      "body_font_category": "sans_serif",
      "button_color": "accent",
      "button_corners": "rounded",
      "button_style": "fill",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "divider_color": null,
      "footer_content": null,
      "header_background_color": "#ffffff",
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "image_corners": "square",
      "link_color": "accent",
      "link_style": "underline",
      "name": "Default",
      "post_title_color": null,
      "section_title_color": null,
      "show_badge": true,
      "show_publication_title": true,
      "slug": "default",
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "title_font_weight": "bold",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Email Templates API Browse Can browse email templates 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "752",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Email Templates API Edit Can edit an email template 1: [body] 1`] = `
Object {
  "email_templates": Array [
    Object {
      "background_color": "#f0f0f0",
      "body_font_category": "sans_serif",
      "button_color": "accent",
      "button_corners": "rounded",
      "button_style": "outline",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "divider_color": null,
      "footer_content": "Custom footer text",
      "header_background_color": "#ffffff",
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "image_corners": "square",
      "link_color": "accent",
      "link_style": "underline",
      "name": "Default",
      "post_title_color": null,
      "section_title_color": null,
      "show_badge": false,
      "show_publication_title": true,
      "slug": "default",
      "title_alignment": "center",
      "title_font_category": "serif",
      "title_font_weight": "bold",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Email Templates API Edit Can edit an email template 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "679",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Email Templates API Edit Cannot edit a non-existent template 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Resource could not be found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot edit email_template.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Email Templates API Edit Cannot edit a non-existent template 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "265",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Email Templates API Read Can read an email template by id 1: [body] 1`] = `
Object {
  "email_templates": Array [
    Object {
      "background_color": "#ffffff",
      "body_font_category": "sans_serif",
      "button_color": "accent",
      "button_corners": "rounded",
      "button_style": "fill",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "divider_color": null,
      "footer_content": null,
      "header_background_color": "#ffffff",
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "image_corners": "square",
      "link_color": "accent",
      "link_style": "underline",
      "name": "Default",
      "post_title_color": null,
      "section_title_color": null,
      "show_badge": true,
      "show_publication_title": true,
      "slug": "default",
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "title_font_weight": "bold",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    },
  ],
}
`;

exports[`Email Templates API Read Can read an email template by id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "664",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Email Templates API Read Cannot read a non-existent template 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Email template not found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot read email_template.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`Email Templates API Read Cannot read a non-existent template 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "262",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
